Fixed spacing issue for columns

--- a/Web Visualizations/style.css
+++ b/Web Visualizations/style.css
@@ -12,10 +12,10 @@ body {
     border: 3px
 } */
 
-.row {
+/* .row {
     background: white;
     margin: 20px
-}
+} */
 
 .col {
     margin: 10px
@@ -28,6 +28,10 @@ body {
         padding: 10px;
         margin: 0px
     }
+}
+
+h1 {
+    margin: 10px
 }
 
 h2 {
